Fix more code style issues